<resources>
    <string name="auth_error">授权登录失败</string>
    <string name="auth_complete">授权登录成功</string>
    <string name="sm_item_auth">ShareSDK授权demo</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="close_info_dialog">关闭信息界面</string>
    <string name="login_to_format">登陆到%s</string>
    <string name="remove_to_format">注销%s登录</string>
    <string name="remove_to_format_success">成功移除%s登录信息</string>

    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>

    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
     <string name="cheese_ipsum">欢迎您使用本人开发的表白墙APP，随着时间迁移，安卓的发展正在飞速前进，为了能更好的提供给大家便捷服务，请留下您宝贵的意见，我们会及时反馈并且听取您的意见做出相关改善！.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="app_name">表白墙</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>

    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="send_state">已读</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>

    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>

    <string name="username">用户名</string>
    <string name="search">搜索</string>

    <string name="new_friends">新朋友</string>

    <string name="near_people">附近的人</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>



    <string name="pull_to_refresh_top_pull">下拉刷新</string>
    <string name="pull_to_refresh_top_release">释放刷新</string>
    <string name="pull_to_refresh_top_refreshing">加载中...</string>
    <string name="pull_to_refresh_bottom_pull">继续拖动</string>
    <string name="pull_to_refresh_bottom_release">放开装载更多</string>
    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>
</resources>
