<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#ff303537" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ssdk_back_arr" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ll_back"
            android:text="@string/register_user_info"
            android:textColor="#ffcfcfcf"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/register_up"
            android:textColor="#ffcfcfcf"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/register_key_user_icon"
            android:textColor="#353535"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_key_user_name"
            android:textColor="#353535"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tv_user_name"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:paddingLeft="10.0dip"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_key_user_gender"
            android:textColor="#353535"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/register_boy"
                    android:textColor="#353535"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/image_boy"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/checked" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_gril"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/register_girl"
                    android:textColor="#353535"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/image_gril"
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/checked" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_key_user_UID"
            android:textColor="#353535"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_user_note"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="5.0dip"
            android:singleLine="true"
            android:textColor="#353535"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_key_user_mail"
            android:textColor="#353535"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:paddingLeft="10.0dip"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/register_key_user_password"
            android:textColor="#353535"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:inputType="textPassword"
            android:paddingLeft="10.0dip"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>