<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_back"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:alpha="0"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="10dp"
        android:enabled="false"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textColor="@color/logo_text_color"
        android:textSize="48dp"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <com.confress.lovewall.view.CustomView.RoundImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/wall"
            imagecontrol:border_inside_color="#bc0978"
            imagecontrol:border_outside_color="#ba3456"
            imagecontrol:border_thickness="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/User_Name"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="#00000000"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:singleLine="true"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/User_Psd"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:singleLine="true"
                android:background="#00000000"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />


        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/White"
            android:textSize="@dimen/text_size_large" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tvWeibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/travel__ic_share_weibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="微博登录"
                    android:textColor="#F66846"
                    android:textSize="18dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tvQq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/takeout_account_ic_oauth_qq" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="Q Q登录"
                    android:textColor="#00ACFD"
                    android:textSize="18dp"></TextView>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:alpha="0"
            android:enabled="false"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/login_with_other_plat_text_color"
            android:textSize="18dp"></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dip"
            >
        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/login_progress"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            style="@style/Base.Animation.AppCompat.Dialog"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_psd"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="忘记密码"
                android:textColor="#F66846"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:gravity="center_vertical"
                android:text="@string/register_txt2"
                android:textColor="#4D9DF5"
                android:textSize="20sp" />
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>